k8s/solution1-GatewayAPI-pod-scaling-GXLB/templates/myapp-staging.service.template.yaml
# Service 'store-prod' has 9x capacity than store-v1. We simulate it with 9x pods ands 9x capacity (max-rate-per-endpoint)
#  APP_NAME:         __APP_NAME__
#  PREFIX:           __PREFIX__
#  REGION:           __REGION__
#  K8S_APP_SELECTOR: __K8S_APP_SELECTOR__
apiVersion: v1
kind: Service
metadata:
  name: sol1sc-__PREFIX__-staging
  annotations:
    networking.gke.io/max-rate-per-endpoint: "90"
  # this is only needed in SOL2 as I call it MANUALLY.
    cloud.google.com/neg: '{"exposed_ports": {"8080":{"name": ""}}}'
spec:
  selector:
    app: __K8S_APP_SELECTOR__
    ricc-env: staging
  ports:
  - port: 8080
    targetPort: 8080
