k8s/solution1-GatewayAPI-pod-scaling-GXLB/templates/store-prod-v2.service-deployment.template.yaml
# Service 'store-prod' has 9x capacity than store-v1. We simulate it with 9x pods ands 9x capacity (max-rate-per-endpoint)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __K8S_APP_SELECTOR__-prod
spec:
  replicas: 4
  selector:
    matchLabels:
      app: __K8S_APP_SELECTOR__
      version: prod
  template:
    metadata:
      labels:
        app: __K8S_APP_SELECTOR__
        version: prod
    spec:
      containers:
      - name: sol1-prod-image-useless #  whereami
        image: __IMAGE_NAME__  # gcr.io/google-samples/whereami:v1.2.1
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: __K8S_APP_SELECTOR__-prod
  annotations:
    networking.gke.io/max-rate-per-endpoint: "90"
    cloud.google.com/neg: '{"exposed_ports": {"8080":{"name": "__K8S_APP_SELECTOR__-prod-neg"}}}'
spec:
  selector:
    app: __K8S_APP_SELECTOR__
    version: prod
  ports:
  - port: 8080
    targetPort: 8080
