k8s/solution1-GatewayAPI-pod-scaling-GXLB/templates/bifid-gateway.template.yaml
###########################################################
# This is a K8S template for Solution1 with some variables.
# You cant kubectl apply this or you'll get errors.
#
# Vars:
#  APP_NAME: __APP_NAME__
#  PREFIX:   __PREFIX__
#  REGION:   __REGION__
#
# .. and so on. in general things with double underscore left and right as Im not a great sedder :)
###########################################################
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
#  name: bifid-external-store-http
  name: __PREFIX__-__REGION__-bifid-ext-gw
spec:
  # PREFIX can be app01, app02, ... maybe with a dash.
  # Consider adding a region too to make this solutionm multiregional :)
  gatewayClassName: __PREFIX__-gke-l7-gxlb
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
