k8s/solution1-GatewayAPI-pod-scaling-GXLB/templates/solution1-gateway.template.yaml
###########################################################
# This is a K8S template for Solution1 with some variables.
# You cant kubectl apply this or you'll get errors.
#
# Vars:
#  APP_NAME: __APP_NAME__
#  PREFIX:   __PREFIX__
#  REGION:   __REGION__
#
# .. and so on. in general things with double underscore left and right as Im not a great sedder :)
###########################################################
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: sol1d-__PREFIX__-ext-gw     # dmarzi_was: external-store-http. Must be the same name than in other place..
spec:
  gatewayClassName: gke-l7-gxlb # do NOT touch :)
  listeners:
  - name: http
    protocol: HTTP
    port: 80               # I've also tried 8080
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
